--- a/igloo.html
+++ b/igloo.html
@@ -159,18 +159,18 @@
           <div class="col-md-2 sticky-tabs">
             <ul class="nav nav-tabs flex-column" id="myTab" role="tablist">
               <!-- Title -->
-              <li class="nav-item igpro-types-title" style="pointer-events:none; padding:20px 0 20px 0; color:#b477dc; font-weight:300; font-size:24px;"> Project Types </li>
+              <li class="nav-item tab-group-title" style="pointer-events:none; padding:12px 0 15px 0; color:#b477dc; font-weight:300; font-size: 18px;"> Project Types </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link active" id="tab1-tab" data-bs-toggle="tab" href="#tab1" role="tab" aria-controls="tab1" aria-selected="true"> Classic - New </a>
+                <a class="nav-link active" id="tab1-tab" data-bs-toggle="tab" href="#tab1" role="tab" aria-controls="tab1" aria-selected="true">Classic: <span style="font-weight: 200;">New</span></a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" id="tab2-tab" data-bs-toggle="tab" href="#tab2" role="tab" aria-controls="tab2" aria-selected="false"> Classic - Evolve </a>
+                <a class="nav-link" id="tab2-tab" data-bs-toggle="tab" href="#tab2" role="tab" aria-controls="tab2" aria-selected="false">Classic: <span style="font-weight: 200;">Evolve</span></a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" id="tab3-tab" data-bs-toggle="tab" href="#tab3" role="tab" aria-controls="tab3" aria-selected="false"> Flex </a>
+                <a class="nav-link" id="tab3-tab" data-bs-toggle="tab" href="#tab3" role="tab" aria-controls="tab3" aria-selected="false">Flex</a>
               </li>
               <li class="nav-item" role="presentation">
-                <a class="nav-link" id="tab4-tab" data-bs-toggle="tab" href="#tab4" role="tab" aria-controls="tab4" aria-selected="false"> Appspace</a>
+                <a class="nav-link" id="tab4-tab" data-bs-toggle="tab" href="#tab4" role="tab" aria-controls="tab4" aria-selected="false">Appspace</a>
               </li>
             </ul>
           </div>
@@ -179,10 +179,10 @@
             <div class="tab-group-title">Project Types</div>
             <ul class="nav nav-tabs-horizontal" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" data-bs-toggle="tab" href="#tab1">Classic - New</a>
+                <a class="nav-link active" data-bs-toggle="tab" href="#tab1">Classic: <span style="font-weight: 200;">New</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab2">Classic - Evolve</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab2">Classic: <span style="font-weight: 200;">Evolve</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab3">Flex</a>
@@ -205,8 +205,8 @@
                     <th style="text-align:left; padding:18px 12px 6px 12px; color: #cfcbc9; border-bottom:1px solid #585858; width:33.33%;"> Process </th>
                   </tr>
                   <tr style="font-size:17px; font-weight: 200;">
-                    <td style="padding:12px 30px 12px 0; vertical-align:top;"> Igloo's Classic platform is targeted to desktop workers. New Classic projects serve both new or existing customers adding another Igloo. </td>
-                    <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word;"> Visual designer works in collaboration with Solutions Consultants, Implementation Specialists and customer to achieve the end-result. </td>
+                    <td style="padding:12px 30px 12px 0; vertical-align:top;"> Igloo Classic is targeted to desktop workers. New Classic projects serve both new and existing customers adding another Igloo. </td>
+                    <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word;"> Visual designer works with Solutions Consultants, Implementation Specialists and customer to achieve the end-result. </td>
                     <td style="padding:12px; vertical-align:top;"> 🗣️ Design Consultation <br> 🎨 Figma Mockups <br> 👀 Peer Review <br> 🎨 Mockup Refinements <br> 🎨 Theme Implementation <br> 👀 QA + Peer Review <br> 🗣️ Theme Walkthrough </td>
                   </tr>
                 </table>
@@ -214,12 +214,12 @@
                 <table class="mobile-table" style="width:100%; border-collapse:collapse; color:#e6e1df; display:none;">
                   <tr style="font-size:17px; font-weight: 200;">
                     <td style="padding:12px 0; text-align:left; border-bottom:1px solid #585858; width: 100%;vertical-align:top;">
-                      <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Platform</h5> Igloo's Classic platform is targeted to desktop workers. Serving new customers, or existing customers adding another Igloo.
+                      <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Platform</h5> Igloo Classic is targeted to desktop workers. Serving new and customers, or existing customers adding another Igloo.
                     </td>
                   </tr>
                   <tr style="font-size:17px; font-weight: 200;">
                     <td style="padding:12px 0; text-align:left; border-bottom:1px solid #585858; width: 100%;vertical-align:top;">
-                      <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Role</h5> Visual designer works in collaboration with Solutions Consultants, Implementation Specialists and customer to achieve the end-result.
+                      <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Role</h5> Visual designer works with Solutions Consultants, Implementation Specialists and customer to achieve the end-result.
                     </td>
                   </tr>
                   <tr style="font-size:17px; font-weight: 200;">
@@ -263,7 +263,7 @@
                     <th style="text-align:left; color: #cfcbc9; padding:18px 12px 6px 12px; border-bottom:1px solid #585858; width:33.33%;"> Process </th>
                   </tr>
                   <tr style="font-size:17px; font-weight: 200;">
-                    <td style="padding:12px 30px 12px 0; vertical-align:top;"> Igloo's Classic platform is targeted to desktop workers. Classic Evolve projects serve existing customers wanting to refresh their theme & homepage. </td>
+                    <td style="padding:12px 30px 12px 0; vertical-align:top;"> Igloo Classic is targeted to desktop workers. Evolve Classic projects serve existing customers wanting to refresh their theme & homepage. </td>
                     <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word;"> Visual designer works with customer end-to-end to achieve the final result. </td>
                     <td style="padding:12px; vertical-align:top;">
                       <div style="padding-left:22px; text-indent:-22px;">🗣️ Design Consultation</div>
@@ -278,7 +278,7 @@
                 <table class="mobile-table" style="width:100%; border-collapse:collapse; color:#e6e1df; display:none;">
                   <tr style="font-size:18px; font-weight: 200;">
                     <td style="padding:12px 0; text-align:left; border-bottom:1px solid #585858; width:100%; vertical-align:top;">
-                      <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Platform</h5> Classic is Igloo's bread & butter platform targeted to desktop workers. Evolve projects serve existing customers wanting to refresh their theme & homepage.
+                      <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Platform</h5> Igloo Classic is targeted to desktop workers. Evolve Classic projects serve existing customers wanting to refresh their theme & homepage. 
                     </td>
                   </tr>
                   <tr style="font-size:18px; font-weight: 200;">
@@ -349,20 +349,20 @@
                       <th style="text-align:left; color: #cfcbc9; padding:18px 12px 6px 12px; border-bottom:1px solid #585858; width:33.33%;"> Process </th>
                     </tr>
                     <tr style="font-size:17px; font-weight: 200;">
-                      <td style="padding:12px 30px 12px 0; vertical-align:top;"> Igloo's Flex platform is mobile-first, targeted to front-line workers. Flex projects serve new customers and existing customers migrating from Classic to Flex. </td>
-                      <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word;"> Visual designer works in collaboration with Solutions Consultants, Builders, Implementation Specialists and customer to achieve the end-result. </td>
+                      <td style="padding:12px 30px 12px 0; vertical-align:top;"> Igloo Flex is mobile-first, targeted to front-line workers. Flex projects serve new customers and existing customers migrating from Classic to Flex. </td>
+                      <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word;"> Visual designer works with Solutions Consultants, Builders, Implementation Specialists and customer to achieve the end-result. </td>
                       <td style="padding:12px; vertical-align:top;"> 👀 Strategic jam sesh <br> 🗣️ Design Consultation <br> 🎨 Theme Implementation <br> 🗣️ Theme Walkthrough <br> 🎨 Refinements </td>
                     </tr>
                   </table>
                   <table class="mobile-table" style="width:100%; border-collapse:collapse; color:#e6e1df; font-size:18px; display:none;">
                     <tr style="font-size:18px; font-weight: 200;">
                       <td style="padding:12px 0; text-align:left; border-bottom:1px solid #585858; width:100%; vertical-align:top;">
-                        <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Platform</h5> Flex is Igloo's mobile-first platform targeted to front-line workers. Serving new customers, and existing customers migrating from Classic to Flex.
+                        <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Platform</h5> Igloo Flex is mobile-first, targeted to front-line workers. Flex projects serve new customers and existing customers migrating from Classic to Flex.
                       </td>
                     </tr>
                     <tr style="font-size:18px; font-weight: 200;">
                       <td style="padding:12px 0; text-align:left; border-bottom:1px solid #585858; width:100%; vertical-align:top;">
-                        <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Role</h5> Visual designer works in collaboration with Solutions Consultants, Builders, Implementation Specialists and customer to achieve the end-result.
+                        <h5 style="font-size: 16px; color: #cfcbc9; font-weight: 600;">Role</h5> Visual designer works with Solutions Consultants, Builders, Implementation Specialists and customer to achieve the end-result.
                       </td>
                     </tr>
                     <tr style="font-size:18px; font-weight: 200;">
@@ -417,8 +417,8 @@
                     <th style="text-align:left; color: #cfcbc9; padding:18px 12px 6px 12px; border-bottom: 1px solid #585858; width:33.33%;"> Process </th>
                   </tr>
                   <tr style="font-size:17px; font-weight: 200;">
-                    <td style="padding:12px 30px 12px 0; vertical-align:top;"> Appspace is a workplace experience platform including Intranet, Digital Signage, Space Reservation and Visitor Management. </td>
-                    <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word;"> Work with existing Igloo customers to translate their Classic or Flex theme and branding, to their new Appspace experience. </td>
+                    <td style="padding:12px 30px 12px 0; vertical-align:top; text-wrap: pretty;"> Appspace is a workplace experience platform including Intranet, Digital Signage, Space Reservation and Visitor Management. </td>
+                    <td style="padding:12px 30px 12px 12px; vertical-align:top; word-wrap:break-word; text-wrap: pretty;"> Work with existing Igloo customers to translate their Classic or Flex theme and branding to their new Appspace experience. </td>
                     <td style="padding:12px; vertical-align:top;">
                       <div style="padding-left:22px; text-indent:-22px;">🎨 Current brand analysis</div>
                       <div style="padding-left:22px; text-indent:-22px;">🗣️ Discovery meeting</div>
