all meta img update
made a copy of & changed html paths for all meta images

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Resume" />
   <meta property="og:url" content="https://www.hannahhatherell.com/resume.html" />
-  <meta property="og:image" content="https://www.hannahhatherell.com/img/projects/thumbs/home.png" />
+  <meta property="og:image" content="https://www.hannahhatherell.com/home.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
