--- a/csp.html
+++ b/csp.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Canadian Science Publishing" />
     <meta property="og:url" content="https://www.hannahhatherell.com/csp.html" />
-    <meta property="og:image" content="https://www.hannahhatherell.com/img/projects/thumbs/csp.png" />
+    <meta property="og:image" content="https://www.hannahhatherell.com/csp.png" />
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
