--- a/euna.html
+++ b/euna.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
         content="Euna Solutions" />
     <meta property="og:url" content="https://www.hannahhatherell.com/euna.html" />
-    <meta property="og:image" content="https://www.hannahhatherell.com/img/projects/thumbs/euna.png" />
+    <meta property="og:image" content="https://www.hannahhatherell.com/euna.png" />
 
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
