--- a/igloo.html
+++ b/igloo.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Igloo Software" />
     <meta property="og:url" content="https://www.hannahhatherell.com/igloo.html" />
-    <meta property="og:image" content="https://www.hannahhatherell.com/img/projects/thumbs/igloo.png" />
+    <meta property="og:image" content="https://www.hannahhatherell.com/igloo.png" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <title>Igloo Software</title>
