index.html mobile updates

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- Recent Work Desktop -->
     <section class="container recent">
       <div class="row recent-work">
-          <div class="col-xs-12 col-sm-12 col-md-6 pr-5">
+          <div class="col-xs-12 col-sm-12 col-md-6">
                   <a href="igloo.html">
               <h2 class="pb-1 show-mobile">Recent Work <span style="color: #d92d26;"></span></h2>
               <h2 class="pb-1 show-desktop">Recent Work</h2>
@@ -119,7 +119,7 @@
               <p class="project-sub">Visual Design. User Interface. Product.</p>
               </a>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-6 igloo pl-3">
+          <div class="col-xs-12 col-sm-12 col-md-6 igloo">
               <a class="d-block mx-auto mb-1 img-fluid recent-project" href="igloo.html"></a>
           </div>
       </div>
